<resources>
    <string name="app_name">FingerTappingApplication</string>
    <string name="taptwoTest">Test podwójnego klikania</string>
    <string name="startBtn">Start</string>
    <string name="browseInfo">Przeglądaj pliki</string>
    <string name="endOfMeasure">Badanie zakończone!</string>
    <string name="userID">ID</string>
    <string name="age">Wiek</string>
    <string name="additionalInfo">Dodatkowe informacje</string>
    <string name="genderLabel">Płeć</string>
    <string name="isParkinson">Czy chorujesz na chorobę Parkinsona</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="imi">Imię</string>
    <string name="identyfikator_badaj_cego">Identyfikator badającego</string>
    <string name="imie">Imię</string>
    <string name="podaj_swoje_dane">Podaj swoje dane</string>
    <string name="identyfikator">Identyfikator</string>
    <string name="settings">Ustawienia</string>
    <string name="start_measure">Rozpocznij badanie</string>
    <string name="instruction">Instrukcja</string>
    <string name="hand">Ręka prawa</string>
    <string name="MainInstruction">Klikaj w wyświetlony cel. Pomiar rozpocznie się po dwukrotnym kliknięciu.</string>
    <string name="leftHandInfo">Ręka lewa</string>
    <string name="rightHandInfo">Ręka prawa</string>
    <string name="classicInstruction">Badanie: finger tapping. Klikaj w ekran naprzemiennie dwoma palcami (wskazującym i środkowym). Pomiar rozpocznie się po kliknięciu przycisku</string>
    <string name="synchInstruction">Badanie: synchroniczny finger tapping. Klikaj w ekran naprzemiennie dwoma palcami (wskazującym i środkowym) w wyświetlane cele. Pomiar rozpocznie się po kliknięciu przycisku</string>
    <string name="randInstruction">Badanie: synchroniczny finger tapping z losowym celem. Klikaj w ekran naprzemiennie dwoma palcami (wskazującym i środkowym) w wyświetlane cele. Pomiar rozpocznie się po kliknięciu przycisku</string>
    <string name="measurementLeft">Zostało badań:</string>
    <string name="instructionClassic">Usiądź i oprzyj rękę stabilnie na blacie.   Klikaj w ekran naprzemiennie dwoma palcami i staraj się trafić w cel.  W zależności od dłoni, którą wykonywane jest zadanie, dla lewej palec środkowy powinień trafiać w lewy cel   a wskazujący w prawy, dla dłoni prawej analogicznie.</string>
    <string name="instructionSynch">Usiądź i oprzyj rękę stabilnie na blacie.   Klikaj w ekran naprzemiennie dwoma palcami   starając się trafić w wyświetlany w równych odstępach czasu cel.  W zależności od dłoni, którą wykonywane jest zadanie, dla lewej palec środkowy powinień trafiać w lewy cel   a wskazujący w prawy, dla dłoni prawej analogicznie.</string>
    <string name="instructionRand">Usiądź i oprzyj rękę stabilnie na blacie.   Klikając w ekran staraj się trafić w wyświetlany w równych odstępach czasu cel.  Cel wyświetlany jest po losowej stronie ekranu.  W zależności od dłoni, którą wykonywane jest zadanie, dla lewej palec środkowy powinień trafiać w lewy cel   a wskazujący w prawy, dla dłoni prawej analogicznie.</string>
    <string name="dominantHand">Dominująca ręka</string>
    <string name="tremor">Drżenia</string>
    <string name="group">Grupa</string>
    <string name="Process">Przejdź dalej</string>
</resources>
