<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.fingertapping.UserDataActivity">

    <TextView
        android:id="@+id/labell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/podaj_swoje_dane"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/identLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/identyfikator_badaj_cego"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/identyfikator"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/imie"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Imię"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nazwisko"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nazwisko"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/genderLabel"
        android:textColor="#000000"
        android:textSize="18sp"
        />

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/gender" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/age"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textShortMessage|number|textPersonName|text" />

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/isParkinson"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/parkinsonL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/yesNo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dominantHand"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/dominantHand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/hand" />

    <TextView
        android:id="@+id/additionalInfoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tremor"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/tremor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/tremor" />

    <TextView
        android:id="@+id/labelG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/group"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/group" />

    <TextView
        android:id="@+id/additionalInfoLabel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/additionalInfo"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/additionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/additionalInfo"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/startMeasure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="startFingerTapping"
        android:text="@string/Process"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alertLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="#F10000"
        android:textSize="18sp" />
</LinearLayout>